# api/openapi3.0.yml
@@ -15,50 +15,59 @@ servers:
   - url: https://eoc-survey-repository.infra-workers.workers.dev/
   - url: http://localhost:8787
 paths:
-  /suvery:
-    post:
-      tags:
-        - SurveyRepository
-      summary: Creates a new RespondentProfileSurveyIndex in the store.  Duplicates are not allowed
-      description: Creates a new RespondentProfileSurveyIndex in the store.  Duplicates are not allowed
-      operationId: addRespondentProfileSurveyIndex
-      requestBody:
-        description: RespondentProfileSurveyIndex to add to the store
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Survey'
-      responses:
-        '200':
-          description: RespondentProfileSurveyIndex response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Survey'
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /suvery/{id}:
+  /survey:
     get:
       tags:
         - SurveyRepository
-      summary: Returns a RespondentProfileSurveyIndex based on a single ID
-      description: Returns a RespondentProfileSurveyIndex based on a single ID
-      operationId: findRespondentProfileSurveyIndexById
+      summary: Returns all Surveys from the system that the user has access to
+      description: Returns all Surveys from the system that the user has access to
+      operationId: findSurvey
       parameters:
-        - name: id
-          in: path
-          description: ID of RespondentProfileSurveyIndex to fetch
+        - schema:
+            type: number
+            description: Page number
           required: true
-          schema:
-            type: string
+          description: Page number
+          name: page
+          in: query
+        - schema:
+            type: boolean
+            description: Filter by completed flag
+          required: false
+          description: Filter by completed flag
+          name: isCompleted
+          in: query
       responses:
         '200':
-          description: RespondentProfileSurveyIndex response
+          description: Survey response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Survey'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    post:
+      tags:
+        - SurveyRepository
+      summary: Creates \ Update a new Survey in the store.  Duplicates are not allowed
+      description: Creates \ Update a new Survey in the store.  Duplicates are not allowed
+      operationId: addOrUpdateSurvey
+      requestBody:
+        description: Survey to add to the store
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Survey'
+      responses:
+        '200':
+          description: Survey response
           content:
             application/json:
               schema:
@@ -69,33 +78,49 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-    put:
+  /survey/{id}:
+    get:
       tags:
         - SurveyRepository
-      summary: Update RespondentProfileSurveyIndex in the store based on a single ID
-      description: Update RespondentProfileSurveyIndex in the store based on a single ID
-      operationId: updateRespondentProfileSurveyIndex
+      summary: Returns a Survey based on a single ID
+      description: Returns a Survey based on a single ID
+      operationId: findSurveyById
       parameters:
         - name: id
           in: path
-          description: ID of RespondentProfileSurveyIndex to update
+          description: ID of Survey to fetch
           required: true
           schema:
             type: string
-      requestBody:
-        description: RespondentProfileSurveyIndex to update to the store
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Survey'
       responses:
         '200':
-          description: RespondentProfileSurveyIndex response
+          description: Survey response
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Survey'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    delete:
+      tags:
+        - SurveyRepository
+      summary: deletes a single Survey based on the ID supplied
+      description: deletes a single Survey based on the ID supplied
+      operationId: deleteSurvey
+      parameters:
+        - name: id
+          in: path
+          description: ID of Survey to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Survey deleted
         default:
           description: unexpected error
           content:
